--- a/components/shared/layout/Layout.scss
+++ b/components/shared/layout/Layout.scss
@@ -1,15 +1,17 @@
 body {
-    background: url(~/static/images/ftb-latestnew.jpg) no-repeat;
     color: #fff;
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+
+    @media (min-width: 1025px) {
+        background: url(~/static/images/ftb-latestnew.jpg) no-repeat;
+    }
 }
 
 .container {
     width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
+
     margin-right: auto;
     margin-left: auto;
     box-sizing: border-box;
@@ -22,9 +24,10 @@ body {
     //   max-width: 720px;
     // }
 
-    // @media (min-width: 992px) {
-    //   max-width: 960px;
-    // }
+    @media (min-width: 1025px) {
+        padding-right: 15px;
+        padding-left: 15px;
+    }
 
     @media (min-width: 1200px) {
         max-width: 1140px;
@@ -53,20 +56,36 @@ body {
     }
 }
 
+.show-mobile {
+    @media (min-width: 1025px) {
+        display: none !important;
+    }
+}
+
+.hide-mobile {
+    display: none;
+
+    @media (min-width: 1025px) {
+        display: block !important;
+    }
+}
+
 .wrap-content {
     display: flex;
     flex: 0 1 auto;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-right: -.5rem;
-    margin-left: -.5rem;
+
 
     .left-container,
     .main-container,
     .right-container {
         flex: 0 0 auto;
-        padding-right: .5rem;
-        padding-left: .5rem;
+
+        @media (min-width: 1025px) {
+            padding-right: .5rem;
+            padding-left: .5rem;
+        }
     }
 
     .left-container {
@@ -87,6 +106,11 @@ body {
         flex-basis: 0;
         max-width: 100%;
     }
+
+    @media (min-width: 1025px) {
+        margin-right: -.5rem;
+        margin-left: -.5rem;
+    }
 }
 
 .banner-big {
@@ -102,4 +126,94 @@ body {
     color: #333;
     padding: 10px;
     height: 75%;
+    box-sizing: border-box;
+}
+
+.badge-label {
+    background: #ff9f0a;
+    padding: 0 2px;
+    display: inline-block;
+    color: #000;
+    border-radius: 2px;
+    height: 14px;
+    line-height: 14px;
+    font-size: 12px;
+    margin-right: 5px;
+}
+
+.btn {
+    height: 26px;
+    line-height: 26px;
+    text-transform: capitalize;
+    padding: 0 1rem;
+    border: 0;
+
+    &.live-match {
+        background: rgba($color: #fff, $alpha: 0.2);
+        color: #edbf2e;
+    }
+}
+
+.menu {
+    margin: 0;
+    padding: 0;
+
+    .menu-item {
+        list-style: none;
+        display: inline-block;
+        padding: 10px 20px;
+    }
+}
+
+.site-info {
+    background: #454949;
+    display: none;
+    padding: 8px 10px;
+
+    @media (min-width: 1025px) {
+        display: flex;
+        justify-content: space-between;
+        ;
+    }
+}
+
+.nav-date {
+    display: flex;
+    justify-content: space-between;
+    background: #3876a7;
+
+    .btn {
+        margin: 8px;
+    }
+}
+
+.date-bar {
+    margin-right: 8px;
+
+    >span {
+        display: inline-block;
+        padding: 0 10px;
+        line-height: 42px;
+        cursor: pointer;
+    }
+
+    .active {
+        background: rgba($color: #fff, $alpha: 0.3);
+    }
+
+    @media (max-width: 1024px) {
+        display: flex;
+        flex: 0 1 auto;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 100%;
+
+        >span {
+            flex-grow: 1;
+            flex-basis: 0;
+            max-width: 100%;
+            text-align: center;
+            padding: 0;
+        }
+    }
 }
