--- a/components/shared/layout/header/top/Top.scss
+++ b/components/shared/layout/header/top/Top.scss
@@ -1,9 +1,25 @@
 .header-top {
     background: #040e17;
     padding: 10px 0;
+    display: none;
 
     .container {
         display: flex;
         justify-content: space-between;
+    }
+
+    @media (min-width: 1025px) {
+        display: block;
+    }
+}
+
+.header-top-mobile {
+    background: #286093;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+
+    @media (min-width: 1025px) {
+        display: none;
     }
 }
