--- a/components/date-bar/style.scss
+++ b/components/date-bar/style.scss
@@ -6,6 +6,11 @@
     .btn {
         margin: 8px;
     }
+
+    
+    .live, .live-match{
+        text-transform: uppercase;
+    }
 }
 
 .date-bar {
@@ -41,4 +46,5 @@
             padding: 0;
         }
     }
+
 }
