--- a/components/shared/layout/header/navbar/Navbar.scss
+++ b/components/shared/layout/header/navbar/Navbar.scss
@@ -56,7 +56,7 @@
       flex-basis: 0;
       max-width: 100%;
       text-align: center;
-      padding: 15px 0;
+      padding: 10px 0;
     }
   }
 
@@ -67,6 +67,11 @@
   .nav-link {
     color: white;
     text-decoration: none;
+
+    > i {
+      display: block;
+      margin-bottom: 6px;
+    }
   }
 
   @media (min-width: 1025px) {
