--- a/components/date-bar/style.scss
+++ b/components/date-bar/style.scss
@@ -27,7 +27,9 @@
     }
   }
 
-
+  .icon-calendar {
+    cursor: pointer;
+  }
 
   .active {
     background: rgba($color: #fff, $alpha: 0.3);
@@ -40,7 +42,8 @@
     flex-wrap: wrap;
     width: 100%;
 
-    > span, > div {
+    > span,
+    > div {
       flex-grow: 1;
       flex-basis: 0;
       max-width: 100%;
@@ -48,8 +51,8 @@
       padding: 0;
     }
 
-    .icon-calendar{
-        line-height: 42px;
+    .icon-calendar {
+      line-height: 42px;
     }
   }
 }
