--- a/components/shared/icons/_fonts.scss
+++ b/components/shared/icons/_fonts.scss
@@ -1,11 +1,35 @@
 @font-face {
     font-family: 'Score247';
-    src: url('/static/fonts/Score247.eot?948xc0');
-    src: url('/static/fonts/Score247.eot?948xc0#iefix') format('embedded-opentype'),
-        url('/static/fonts/Score247.ttf?948xc0') format('truetype'),
-        url('/static/fonts/Score247.woff?948xc0') format('woff'),
-        url('/static/fonts/Score247.svg?948xc0#Score247') format('svg');
+    src: url('/static/fonts/Score247.eot?js7rwo');
+    src: url('/static/fonts/Score247.eot?js7rwo#iefix') format('embedded-opentype'),
+        url('/static/fonts/Score247.ttf?js7rwo') format('truetype'),
+        url('/static/fonts/Score247.woff?js7rwo') format('woff'),
+        url('/static/fonts/Score247.svg?js7rwo#Score247') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: block;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('/static/fonts/Roboto-Regular.ttf') format('truetype');
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('/static/fonts/Roboto-Medium.ttf') format('truetype');
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('/static/fonts/Montserrat-Regular.ttf') format('truetype');
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'Montserrat Bold';
+  src: url('/static/fonts/Montserrat-Bold.ttf') format('truetype');
+  font-weight: bold;
 }
