--- a/pages/Index.scss
+++ b/pages/Index.scss
@@ -1,8 +1,8 @@
 @import "../assets/styles/theme.scss";
 
-$font-size: 50px;
+// $font-size: 50px;
 
-.index-text {
-  font-size: $font-size;
-  color: $demo;
-}
+// .index-text {
+//   font-size: $font-size;
+//   color: $demo;
+// }
