--- a/components/shared/icons/Icons.scss
+++ b/components/shared/icons/Icons.scss
@@ -16,52 +16,41 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-search:before {
-    content: "\e906";
-}
-
-.icon-hambuger:before {
-    content: "\e904";
-    color: #fff;
-}
-
-.icon-menu-tv:before {
-    content: "\e905";
-    color: #cbcbcb;
-}
-
-.icon-menu-favorites:before {
-    content: "\e907";
-}
-
-.icon-menu-leagues:before {
-    content: "\e908";
-    color: #cbcbcb;
-}
-
-.icon-menu-news:before {
-    content: "\e909";
-    color: #cbcbcb;
-}
-
-.icon-menu-scores:before {
-    content: "\e90a";
-    color: #ff7d00;
-}
-
-.icon-calendar:before {
-    content: "\e900";
-}
-
-.icon-basketball:before {
-    content: "\e901";
-}
-
 .icon-esports:before {
-    content: "\e902";
+  content: "\e900";
+  color: #fff;
 }
-
+.icon-basketball:before {
+  content: "\e901";
+  color: #fff;
+}
+.icon-search:before {
+  content: "\e902";
+}
 .icon-soccer:before {
-    content: "\e903";
-    color: #21339f;
+  content: "\e903";
+  color: #fff;
+}
+.icon-calendar:before {
+  content: "\e906";
+  color: #9193a1;
+}
+.icon-hambuger:before {
+  content: "\e904";
+  color: #fff;
+}
+.icon-menu-tv:before {
+  content: "\e905";
+  color: #cbcbcb;
+}
+.icon-menu-favorites:before {
+  content: "\e907";
+}
+.icon-menu-leagues:before {
+  content: "\e908";
+  color: #cbcbcb;
+}
+.icon-menu-news:before {
+  content: "\e909";
+  color: #cbcbcb;
 }
