--- a/components/shared/layout/header/navbar/Navbar.scss
+++ b/components/shared/layout/header/navbar/Navbar.scss
@@ -1,18 +1,13 @@
+@import '../../../../../assets/styles//abstracts/variables';
+
 .nav-menu {
-  background: #017aaf;
-  font-weight: bold;
+  background: $functionBg;
+  font-family: 'Montserrat', Verdana, Geneva, Tahoma, sans-serif;
+
   .container {
     display: flex;
     justify-content: space-between;
-  }
-
-  .menu-item:last-child {
-    padding-right: 0;
-  }
-
-  .menu-item:first-child {
-    padding-left: 0;
-  }
+  }  
 
   .nav-function {
     text-transform: uppercase;
@@ -21,17 +16,21 @@
   .nav-link {
     color: white;
     text-decoration: none;
+    font-size: 1.4rem;
+    font-weight: normal;
+    text-transform: uppercase;
+
+    > i {
+      margin-right: 5px;
+    }
   }
 
   .menu-item.active {
-    background-color: red;
+    background-color: rgba($color: #000000, $alpha: .12);
   }
 
   .nav-sports {
-    background-color: #015a96;
-    .menu-item.active {
-      background-color: #3876a7;
-    }
+    
   }
 }
 
@@ -56,7 +55,7 @@
       flex-basis: 0;
       max-width: 100%;
       text-align: center;
-      padding: 10px 0;
+      padding: 12px 0;
     }
   }
 
