--- a/components/shared/layout/header/top/Top.scss
+++ b/components/shared/layout/header/top/Top.scss
@@ -1,5 +1,7 @@
+@import '../../../../../assets/styles/abstracts/variables';
+
 .header-top {
-  background: #040e17;
+  background: $headerBg;
   padding: 10px 0;
   display: none;
 
