--- a/components/bread-crumbs/style.scss
+++ b/components/bread-crumbs/style.scss
@@ -1,8 +1,8 @@
 @import '../../assets/styles//abstracts/variables';
 .site-info {
   display: none;
-  padding: 27px 0;
-  font-size: 18px;
+  padding: 2.7rem 0;
+  font-size: 1.8rem;
 
   @media (min-width: 1025px) {
     display: flex;
