--- a/components/date-bar/style.scss
+++ b/components/date-bar/style.scss
@@ -3,17 +3,17 @@
   justify-content: space-between;
   background: #fff;
   padding: 1.8rem 2.2rem;
-  border-radius: 4px 4px 0 0;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 2px -5px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);   
+  border-radius: .4rem .4rem 0 0;
+  box-shadow: 0 .2rem .2rem 0 rgba(0, 0, 0, 0.14), 0 .3rem .2rem -0.5rem rgba(0, 0, 0, 0.2), 0 .1rem .5rem 0 rgba(0, 0, 0, 0.12);   
 }
 
 .date-bar {
   > span {
     display: inline-block;
-    padding: 0 10px;
-    line-height: 33px;
+    padding: 0 1rem;
+    line-height: 3.3rem;
     color: #9193A1;
-    font-size: 14px;
+    font-size: 1.4rem;
     cursor: pointer;    
     text-transform: capitalize;
   }
@@ -25,7 +25,7 @@
   }
 
   .datepicker-wrapper {
-    padding: 0 10px;
+    padding: 0 1rem;
     cursor: pointer;
 
     &.active {
@@ -33,7 +33,7 @@
     }
 
     .icon-calendar {
-      font-size: 20px;
+      font-size: 2rem;
       display: inline-block;
       vertical-align: middle;
     }
