--- a/components/shared/layout/Layout.scss
+++ b/components/shared/layout/Layout.scss
@@ -6,7 +6,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    font-size: 12px;
+    font-size: 1.2rem;
     background: #F8F9FC;   
     font-family: 'Roboto', Verdana, Geneva, Tahoma, sans-serif; 
 }
@@ -31,12 +31,12 @@ body {
     // }
 
     @media (min-width: 1025px) {
-        padding-right: 12px;
-        padding-left: 12px;
+        padding-right: 1.2rem;
+        padding-left: 1.2rem;
     }
 
     @media (min-width: 1200px) {
-        max-width: 1273px;
+        max-width: 127.3rem;
     }
 }
 
@@ -44,33 +44,33 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 0 5px 0 #d7d7d7;
-    padding: 10px;
-    border-radius: 3px;
-    margin-bottom: 6px;
+    box-shadow: 0 0 .5rem 0 #d7d7d7;
+    padding: 1rem;
+    border-radius: .3rem;
+    margin-bottom: .6rem;
 
     
 
     &.h-200 {
-        height: 200px;
+        height: 20rem;
     }
 
     &.h-400 {
-        height: 400px;
+        height: 40rem;
     }
 }
 
 .login {
     display: inline-block;
     padding: 1rem 2rem;
-    border-radius: 4px;
+    border-radius: .4rem;
     border: 1px solid #fff;
     font-family: "Montserrat";
-    font-size: 14px;
+    font-size: 1.4rem;
     color: #fff;
     
     &:first-child {
-      margin-right: 5px;
+      margin-right: .5rem;
     }
 }
 
@@ -107,13 +107,13 @@ body {
     }
 
     .left-container {
-        flex-basis: 267px;
-        max-width: 267px;
+        flex-basis: 26.7rem;
+        max-width: 26.7rem;
     }
 
     .right-container {
-        flex-basis: 292px;
-        max-width: 292px;
+        flex-basis: 29.2rem;
+        max-width: 29.2rem;
     }
 
     .main-container {
@@ -132,31 +132,31 @@ body {
 }
 
 .banner-big {
-    height: 100px;
+    height: 10rem;
 }
 
 .banner-small {
-    height: 50px;
+    height: 5rem;
 }
 
 .content {
     background: #fff;
     color: #333;
-    padding: 10px;
+    padding: 1rem;
     height: 75%;
     box-sizing: border-box;
 }
 
 .badge-label {
     background: #ff9f0a;
-    padding: 0 2px;
+    padding: 0 .2rem;
     display: inline-block;
     color: #000;
-    border-radius: 2px;
-    height: 14px;
-    line-height: 14px;
-    font-size: 12px;
-    margin-right: 5px;
+    border-radius: .2rem;
+    height: 1.4rem;
+    line-height: 1.4rem;
+    font-size: 1.2rem;
+    margin-right: .5rem;
 }
 
 .menu {
@@ -166,10 +166,9 @@ body {
     .menu-item {
         list-style: none;
         display: inline-block;
-        padding: 13px 15px;
+        padding: 1.3rem 1.5rem;
     }
 }
-
 
 .banner {
   .ads-img {
