--- a/components/shared/layout/header/navbar/Navbar.scss
+++ b/components/shared/layout/header/navbar/Navbar.scss
@@ -21,16 +21,12 @@
     text-transform: uppercase;
 
     > i {
-      margin-right: 5px;
+      margin-right: .5rem;
     }
   }
 
   .menu-item.active {
     background-color: rgba($color: #000000, $alpha: .12);
-  }
-
-  .nav-sports {
-    
   }
 }
 
@@ -55,7 +51,7 @@
       flex-basis: 0;
       max-width: 100%;
       text-align: center;
-      padding: 12px 0;
+      padding: 1.2rem 0;
     }
   }
 
@@ -69,7 +65,7 @@
 
     > i {
       display: block;
-      margin-bottom: 6px;
+      margin-bottom: .6rem;
     }
   }
 
