--- a/components/shared/layout/header/top/Top.scss
+++ b/components/shared/layout/header/top/Top.scss
@@ -10,6 +10,18 @@
     justify-content: space-between;
   }
 
+  .logo {
+    > img {
+      display: inline-block;
+      vertical-align: middle;
+    }
+
+    .logo-text {
+      width: 15rem;
+      margin-left: 1rem;
+    }
+  }
+
   @media (min-width: 1025px) {
     display: block;
   }
