--- a/components/bread-crumbs/style.scss
+++ b/components/bread-crumbs/style.scss
@@ -1,8 +1,8 @@
 @import '../../assets/styles//abstracts/variables';
 .site-info {
   display: none;
-  padding: 2.7rem 0;
-  font-size: 1.8rem;
+  padding: 2.3rem 0;
+  font-size: 1.4rem;
 
   @media (min-width: 1025px) {
     display: flex;
@@ -21,5 +21,20 @@
 
   .GMT-time {
     color: #3A3B45;
+    position: relative;
+    padding-right: 2.2rem;
+
+    &:after {
+      content: "";
+      position: absolute;
+      width: 0;
+      height: 0;
+      top: 50%;
+      right: 8px;
+      margin-top: -2px;
+      border-style: solid;
+      border-color: #282d38 transparent transparent transparent;
+      border-width: 4px 4px 0 4px;
+    }
   }
 }
