--- a/components/shared/layout/Layout.scss
+++ b/components/shared/layout/Layout.scss
@@ -153,7 +153,7 @@ body {
 
 .badge-label {
     background: #ff9f0a;
-    padding: 0 .2rem;
+    padding: 0 .4rem 0 .4rem;
     display: inline-block;
     color: #000;
     border-radius: .2rem;
