--- a/components/bread-crumbs/style.scss
+++ b/components/bread-crumbs/style.scss
@@ -9,7 +9,7 @@
     justify-content: space-between;
   }
 
-  .selected-sport {
+  .selected-sport, .selected-sub {
     color: #263E6C;
     font-weight: bold;
     text-transform: capitalize;
