--- a/components/shared/icons/_fonts.scss
+++ b/components/shared/icons/_fonts.scss
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'Score247';
-    src: url('/static/fonts/Score247.eot?js7rwo');
-    src: url('/static/fonts/Score247.eot?js7rwo#iefix') format('embedded-opentype'),
-        url('/static/fonts/Score247.ttf?js7rwo') format('truetype'),
-        url('/static/fonts/Score247.woff?js7rwo') format('woff'),
-        url('/static/fonts/Score247.svg?js7rwo#Score247') format('svg');
+    src: url('/static/fonts/Score247.eot?uarmrv');
+    src: url('/static/fonts/Score247.eot?uarmrv#iefix') format('embedded-opentype'),
+        url('/static/fonts/Score247.ttf?uarmrv') format('truetype'),
+        url('/static/fonts/Score247.woff?uarmrv') format('woff'),
+        url('/static/fonts/Score247.svg?uarmrv#Score247') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: block;
