--- a/components/date-bar/style.scss
+++ b/components/date-bar/style.scss
@@ -2,9 +2,8 @@
   display: flex;
   justify-content: space-between;
   background: #fff;
-  padding: 1.8rem 2.2rem;
   border-radius: .4rem .4rem 0 0;
-  box-shadow: 0 .2rem .2rem 0 rgba(0, 0, 0, 0.14), 0 .3rem .2rem -0.5rem rgba(0, 0, 0, 0.2), 0 .1rem .5rem 0 rgba(0, 0, 0, 0.12);   
+  box-shadow: 0 .1rem .4rem 0 rgba(0,0,0,.14);   
 }
 
 .date-bar {
@@ -46,6 +45,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
+    align-items: center;
 
     > span,
     > .datepicker-wrapper {
