--- a/components/date-bar/style.scss
+++ b/components/date-bar/style.scss
@@ -1,9 +1,20 @@
+@mixin circle($circleSize) {
+  width: $circleSize;
+  height: $circleSize;
+  border-radius: $circleSize/2;
+}
+
 .nav-date {
   display: flex;
   justify-content: space-between;
   background: #fff;
+  
   border-radius: .4rem .4rem 0 0;
-  box-shadow: 0 .1rem .4rem 0 rgba(0,0,0,.14);   
+  box-shadow: 0 .2rem .2rem 0 rgba(0, 0, 0, 0.14), 0 .3rem .2rem -0.5rem rgba(0, 0, 0, 0.2), 0 .1rem .5rem 0 rgba(0, 0, 0, 0.12);   
+
+  @media (min-width: 1025px) {
+    padding: 1.8rem 2.2rem;
+  }
 }
 
 .date-bar {
@@ -15,12 +26,51 @@
     font-size: 1.4rem;
     cursor: pointer;    
     text-transform: capitalize;
+    border-bottom: 1px solid transparent;
   }
 
   .active {
     color: #3A3B45;    
-    border-bottom: 1px solid #3A3B45;
+    border-bottom-color: #3A3B45;
     font-weight: bold;
+  }
+
+  .live {
+    position: relative;
+  }
+
+  .has-live {
+    @include circle(7px);    
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    transform: translateX(6px);
+    background: #FC1923;
+    display: block;
+
+    &:before,
+    &:after {
+      content: "";
+      @include circle(7px);
+      background-color:#FC1923;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      margin: auto;
+      transform: scale(0.5);
+      transform-origin: center center;
+      animation: pulse-me 3s linear infinite;
+    }
+
+    &:after {
+      animation-delay: 2s;
+    }
+  }
+
+  .icon-live {
+    font-size: 2rem;
   }
 
   .datepicker-wrapper {
@@ -29,14 +79,17 @@
 
     &.active {
       border-bottom: 0;
+
+      .icon-calendar::before {
+        color: #3A3B45;
+      }
     }
 
     .icon-calendar {
       font-size: 2rem;
       display: inline-block;
       vertical-align: middle;
-    }
-    
+    }    
   } 
 
   @media (max-width: 1024px) {
@@ -44,8 +97,14 @@
     flex: 0 1 auto;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 100%;
-    align-items: center;
+    width: 100%;  
+    
+    .icon-live, .icon-calendar {
+      display: block;
+      height: 4.5rem;
+      line-height: 4.5rem;
+      border-bottom: 1px solid transparent;
+    }
 
     > span,
     > .datepicker-wrapper {
@@ -54,10 +113,25 @@
       max-width: 100%;
       text-align: center;
       padding: 0;
-    }
+      line-height: 3.3;
+    }    
+  }
+}
 
-    .icon-calendar{
-        line-height: 2.625;
-    }
+
+@keyframes pulse-me {
+  0% {
+    transform: scale(0.5);
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.1;
+  }
+  70% {
+    opacity: 0.09;
+  }
+  100% {
+    transform: scale(5);
+    opacity: 0;
   }
 }
