--- a/components/shared/layout/header/top/Top.scss
+++ b/components/shared/layout/header/top/Top.scss
@@ -1,4 +1,4 @@
-@import '../../../../../assets/styles/abstracts/variables';
+@import "../../../../../assets/styles/abstracts/variables";
 
 .header-top {
   background: $headerBg;
@@ -29,7 +29,7 @@
 
 .header-top-mobile {
   background: $headerBg;
-  padding: .9rem 1.8rem;
+  padding: 0.9rem 1.8rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -84,7 +84,7 @@
     padding: 0;
 
     > svg {
-      fill: #FF7D00;
+      fill: #ff7d00;
       width: 1.6rem;
     }
   }
@@ -95,7 +95,6 @@
 
   .select__option--is-focused {
     background: none;
-    color: $red;
   }
 
   .select__option--is-selected {
@@ -104,7 +103,7 @@
   }
 
   .select__menu {
-    margin-top: .9rem;
+    margin-top: 0.9rem;
     border-radius: 0;
     box-shadow: none;
     background: none;
@@ -113,7 +112,7 @@
   .select__menu-list {
     padding: 0;
     background: #fff;
-    box-shadow: 0 0.0625em 0.3125em rgba(0,0,0,.15);
+    box-shadow: 0 0.0625em 0.3125em rgba(0, 0, 0, 0.15);
     width: 18rem;
     margin: 0 auto;
   }
@@ -122,7 +121,7 @@
     padding: 1.3rem 2rem;
 
     &:not(:last-child) {
-      border-bottom: 1px solid #DFDFDF;
+      border-bottom: 1px solid #dfdfdf;
     }
 
     i {
