--- a/components/date-bar/style.scss
+++ b/components/date-bar/style.scss
@@ -112,9 +112,12 @@
       flex-basis: 0;
       max-width: 100%;
       text-align: center;
-      padding: 0;
+      padding: 0;      
+    }   
+    
+    > span {
       line-height: 3.3;
-    }    
+    }
   }
 }
 
