12605 - update css on mobile

--- a/components/bread-crumbs/style.scss
+++ b/components/bread-crumbs/style.scss
@@ -1,12 +1,12 @@
 @import '../../assets/styles//abstracts/variables';
 .site-info {
-  display: none;
+  display: flex;
+  justify-content: space-between;
   padding: 2.3rem 0;
   font-size: 1.4rem;
 
-  @media (min-width: 1025px) {
-    display: flex;
-    justify-content: space-between;
+  .mobile & {
+    display: none;
   }
 
   .selected-sport, .selected-sub {
