--- a/components/date-bar/style.scss
+++ b/components/date-bar/style.scss
@@ -8,16 +8,18 @@
   display: flex;
   justify-content: space-between;
   background: #fff;
+  padding: 1.8rem 2.2rem;
   
   border-radius: .4rem .4rem 0 0;
   box-shadow: 0 .2rem .2rem 0 rgba(0, 0, 0, 0.14), 0 .3rem .2rem -0.5rem rgba(0, 0, 0, 0.2), 0 .1rem .5rem 0 rgba(0, 0, 0, 0.12);   
 
-  @media (min-width: 1025px) {
-    padding: 1.8rem 2.2rem;
+  .mobile & {
+    padding: 0;
   }
 }
 
 .date-bar {
+
   > span {
     display: inline-block;
     padding: 0 1rem;
@@ -35,8 +37,13 @@
     font-weight: bold;
   }
 
-  .live {
+  .live-score {
     position: relative;
+    display: none;
+
+    .mobile & {
+      display: inline-block;
+    }
   }
 
   .has-live {
@@ -92,7 +99,7 @@
     }    
   } 
 
-  @media (max-width: 1024px) {
+  .mobile & {
     display: flex;
     flex: 0 1 auto;
     flex-direction: row;
