--- a/components/shared/layout/footer/Footer.scss
+++ b/components/shared/layout/footer/Footer.scss
@@ -2,12 +2,13 @@ footer {
   background: #343A40;
   color: #A2A2A3;
   padding: 3rem 0;
-  display: none;
 
-  @media (min-width: 1025px) {
-      display: block !important;
+  .mobile & {
+    display: none;
   }
 }
+
+
 
 .link-footer {
   color: #A2A2A3;
