000 - datebar - add day of week

--- a/components/date-bar/style.scss
+++ b/components/date-bar/style.scss
@@ -27,7 +27,7 @@
     color: #9193A1;
     font-size: 1.4rem;
     cursor: pointer;    
-    text-transform: capitalize;
+    text-transform: uppercase;
     border-bottom: 1px solid transparent;
   }
 
