--- a/components/date-bar/style.scss
+++ b/components/date-bar/style.scss
@@ -19,16 +19,19 @@
 }
 
 .date-bar {
-
-  > span {
+  .date-item {
     display: inline-block;
     padding: 0 1rem;
-    line-height: 3.3rem;
-    color: #9193A1;
+    color: #6E707A;
     font-size: 1.4rem;
     cursor: pointer;    
-    text-transform: uppercase;
+    text-align: center;
     border-bottom: 1px solid transparent;
+    vertical-align: middle;
+  }
+
+  .days {
+    text-transform: uppercase;
   }
 
   .active {
@@ -113,13 +116,19 @@
       border-bottom: 1px solid transparent;
     }
 
-    > span,
-    > .datepicker-wrapper {
+    .days {
+      padding-top: 1rem;
+      font-size: 1.1rem;
+    }
+
+    .date-item, .datepicker-wrapper {    
       flex-grow: 1;
       flex-basis: 0;
       max-width: 100%;
       text-align: center;
       padding: 0;      
+      vertical-align: middle;
+      font-size: .9rem;
     }   
     
     > span {
