126025 - UI View as Desktop site on mobile

--- a/components/date-bar/style.scss
+++ b/components/date-bar/style.scss
@@ -16,6 +16,11 @@
   .mobile & {
     padding: 0;
   }
+
+  @media (max-width: 1199px) {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
 }
 
 .date-bar {
