--- a/assets/styles/components/_buttons.scss
+++ b/assets/styles/components/_buttons.scss
@@ -10,5 +10,10 @@
       color: $white;
       font-size: 1.6rem;
       padding: .8rem 2.5rem;
+
+      @media (max-width: 1199px) {
+        padding-left: 1rem;
+        padding-right: 1rem;
+      }
   }
 }
