--- a/components/date-picker/style.scss
+++ b/components/date-picker/style.scss
@@ -25,13 +25,7 @@
       width: 4.5rem;
       line-height: 4.5rem;
       margin: 0;
-      font-weight: normal;
-
-      .mobile & {
-        width: 3.5rem;
-        line-height: 3.5rem;
-      }
-      
+      font-weight: normal;    
     }   
 
     .react-datepicker__day:hover {
@@ -109,3 +103,17 @@
     }
 }
 
+.mobile {
+  .react-datepicker-popper {
+    width: 100%;
+    transform: translate3d(0, 8rem, 0px) !important;
+    background-color: #fff;
+    box-shadow: 0 0 0.5rem 0 #d7d7d7;
+    margin-top: 0;
+
+    .react-datepicker {
+      border-radius: 0;
+      box-shadow: none;
+    }
+  }
+}
