--- a/components/layout/header/navbar/Navbar.scss
+++ b/components/layout/header/navbar/Navbar.scss
@@ -23,6 +23,10 @@
     >i {
       margin-right: .5rem;
     }
+
+    @media (max-width: 768px) {
+      font-size: 1rem;
+    }
   }
 
   .menu-item.active {
