--- a/components/date-picker/style.scss
+++ b/components/date-picker/style.scss
@@ -106,10 +106,10 @@
 .mobile {
   .react-datepicker-popper {
     width: 100%;
-    transform: translate3d(0, 8rem, 0px) !important;
+    transform: translate3d(0, 9rem, 0px) !important;
     background-color: #fff;
     box-shadow: 0 0 0.5rem 0 #d7d7d7;
-    margin-top: 0;
+    margin-top: 0 !important;
 
     .react-datepicker {
       border-radius: 0;
