--- a/components/date-picker/style.scss
+++ b/components/date-picker/style.scss
@@ -7,14 +7,7 @@
       font-size: 1.4rem;
       border: 0;
       box-shadow: 0 0 0.5rem 0 #d7d7d7;
-    }
-
-    .react-datepicker-popper {
-      //margin-left: -200px;
-      top: 1.2rem !important;
-      left: -15rem !important;
-    }
-
+    }  
     .react-datepicker__header {
       background: #fff;
       padding-top: 2rem;
@@ -107,6 +100,14 @@
         transform: translateY(-.6rem) rotate(45deg);
       }
     }
+}
+
+body:not(.mobile) {
+  .react-datepicker-popper {
+    //margin-left: -200px;
+    top: 1.2rem !important;
+    left: -15rem !important;
+  }
 }
 
 .mobile {
