126494 - CSS table League/Match

--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -1,3 +1,6 @@
+@import "./abstracts/base";
 @import './components/buttons';
 @import "./components/fonts";
 @import "./components/icons";
+@import "./components/forms";
+@import "./components/tables";
