--- a/assets/styles/components/_buttons.scss
+++ b/assets/styles/components/_buttons.scss
@@ -16,4 +16,23 @@
         padding-right: 1rem;
       }
   }
+
+  
+}
+
+.btn-primary-outline {
+  color: $darkBlue;
+  padding: 1rem 1.5rem;
+  background: #fff;
+  border: 1px solid $darkBlue;
+  margin: 0 .5rem;
+  cursor: pointer;
+  font-size: 1.4rem;
+  font-family: inherit;
+  transition: .2s ease;
+
+  &:hover {
+    background: $darkBlue;
+    color: #fff
+  }
 }
