--- a/components/soccer/table/row/style.scss
+++ b/components/soccer/table/row/style.scss
@@ -1,8 +1,16 @@
-.score {
-    .first-half-score{
+.text-score {
+    color: #FF0000;
+    font-weight: bold;
+
+    .text-1H{
         display: none;
         .mobile & {
             display: block;
         }
     }
 }
+
+.text-1H {
+    color: #0057FF;
+    font-weight: bold;
+  }
