--- a/pages/basketball/style.scss
+++ b/pages/basketball/style.scss
@@ -81,3 +81,25 @@ $leagueColor: ( 0: #CD5E31, 1: #ED1B24, 2: #055888, 3: #C5822F, 4: #C03000, 5: #
     
   }
 }
+
+.mobile {
+  padding: 4.3rem 0 5rem;
+  .header-top-mobile {
+    position: fixed;
+    width: 100%;
+    top: 0;
+  }
+  .table th {
+    font-weight: normal;
+    font-size: 1.2rem;
+    height: 4.2rem;
+    border-bottom: .1rem solid #DFDFDF;
+  }
+  .table td {
+    border: none;
+    border-bottom: .1rem solid #DFDFDF;
+  }
+  .col-selected, .col-status, .col-1st-half {
+    display: none;
+  }
+}
