--- a/assets/styles/components/_icons.scss
+++ b/assets/styles/components/_icons.scss
@@ -14,6 +14,14 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-arrow-right:before {
+    content: "\e90b";
+}
+
+.icon-penalty:before {
+    content: "\e90c";
+}
+
 .icon-live:before {
     content: "\e90a";
     color: #9193a1;
