000 - add style for red and yellow card

--- a/components/soccer/table/row/style.scss
+++ b/components/soccer/table/row/style.scss
@@ -14,3 +14,30 @@
     color: #0057FF;
     font-weight: bold;
   }
+
+.icon-arrow-right, .icon-penalty {
+    color: #000;
+    margin-right: .4rem;
+}
+
+[class$="card"] {
+    border-radius: .3rem;
+    color: #000;
+    width: 1.2rem;
+    height: 1.6rem;
+    line-height: 1.8rem;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.1rem;
+    display: inline-block;
+    margin: 0 .4rem;
+    text-align: center;
+}
+
+.red-card {
+    background-color: #FF0000;
+}
+
+.yellow-card {
+    background-color: #ffd600;
+}
+
