000 - style for search bar

--- a/components/display-options/style.scss
+++ b/components/display-options/style.scss
@@ -1,6 +1,8 @@
 .show-hide {
     font-weight: bold;
     text-transform: capitalize;
+    display: flex;
+    align-items: center;
 
     span {
         cursor: pointer;
