--- a/components/soccer/table/row/style.scss
+++ b/components/soccer/table/row/style.scss
@@ -16,13 +16,13 @@
 [class$="card"] {
     border-radius: .3rem;
     color: #000;
-    width: 1.2rem;
     height: 1.6rem;
     line-height: 1.8rem;
     font-family: 'Roboto', sans-serif;
     font-size: 1.1rem;
     display: inline-block;
     margin: 0 .4rem;
+    padding: 0 .4rem;
     text-align: center;
 }
 
