--- a/pages/basketball/style.scss
+++ b/pages/basketball/style.scss
@@ -45,6 +45,7 @@ $leagueColor: ( 0: #CD5E31, 1: #ED1B24, 2: #055888, 3: #C5822F, 4: #C03000, 5: #
 
   .text-extra {
     color: #FEA700;
+    font-size: 1.1rem;
   }
 
   .ad {
