--- a/pages/basketball/style.scss
+++ b/pages/basketball/style.scss
@@ -48,7 +48,7 @@ $leagueColor: ( 0: #CD5E31, 1: #ED1B24, 2: #055888, 3: #C5822F, 4: #C03000, 5: #
     font-size: 1.1rem;
   }
 
-  .ad {
+  .advertisement-wrapper {
     height: 100px;
   }
 }
