--- a/pages/basketball/style.scss
+++ b/pages/basketball/style.scss
@@ -101,8 +101,7 @@ $leagueColor: ( 0: #CD5E31, 1: #ED1B24, 2: #055888, 3: #C5822F, 4: #C03000, 5: #
     border-bottom: .1rem solid #DFDFDF;
   }
   .table td {
-    border: none;
-    border-bottom: .1rem solid #DFDFDF;
+    border: .005rem solid #DFDFDF;
     padding: 0.4rem;
   }
   .col-selected, .col-status, .col-1st-half {
