--- a/assets/styles/components/_icons.scss
+++ b/assets/styles/components/_icons.scss
@@ -14,6 +14,11 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-link-match:before {
+    content: "\e90d";
+    color: #474747;
+}
+
 .icon-arrow-right:before {
     content: "\e90b";
 }
