--- a/components/date-bar/style.scss
+++ b/components/date-bar/style.scss
@@ -10,8 +10,12 @@
   &.live-match {
     background: #fd4549;
     color: $white;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     padding: 0.8rem 2.5rem;
+    &:hover {
+      background-color: #FD6366;
+      box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
+    }
 
     @media (max-width: 1199px) {
       padding-left: 1rem;
